--- a/src/index.css
+++ b/src/index.css
@@ -7,20 +7,61 @@
  color: white;
 }
 .no-scrollbar::-webkit-scrollbar {
-  display: none;
+ display: none;
 }
 
 .no-scrollbar {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+ -ms-overflow-style: none; /* IE and Edge */
+ scrollbar-width: none; /* Firefox */
 }
 
+.flip-card {
+ background-color: transparent;
+ perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+ position: relative;
+ width: 100%;
+ height: 100%;
+ transition: transform 0.8s;
+ transform-style: preserve-3d;
+}
+.flip-card:focus .flip-card-inner {
+ transform: rotateY(180deg);
+}
+/* Position the front and back side */
+.flip-card-front,
+.flip-card-back {
+ position: absolute;
+ width: 100%;
+ height: 100%;
+ -webkit-backface-visibility: hidden; /* Safari */
+ backface-visibility: hidden;
+}
+
+/* Style the back side */
+.flip-card-back {
+ transform: rotateY(180deg);
+}
+
+.isActive {
+ box-shadow: 0 0 0 6px #47ff3e59, 0 0 0 11px #a3ff9e80;
+}
+
+@media (min-width: 1279px) {
+ /* Do an horizontal flip when you move the mouse over the flip box container */
+ .flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+ }
+}
 @media (min-width: 1920px) {
  body {
   display: flex;
   justify-content: center;
   min-height: 100%;
-  margin:0 auto;
+  margin: 0 auto;
  }
  #root {
   width: 75%;
@@ -31,7 +72,7 @@
   display: flex;
   justify-content: center;
   min-height: 100%;
-  margin:0 auto;
+  margin: 0 auto;
  }
  #root {
   width: 50%;
