--- a/src/index.css
+++ b/src/index.css
@@ -14,13 +14,11 @@
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
 }
-
 .flip-card {
  background-color: transparent;
- perspective: 1000px; /* Remove this if you don't want the 3D effect */
+ perspective: 1000px; 
 }
 
-/* This container is needed to position the front and back side */
 .flip-card-inner {
  position: relative;
  width: 100%;
@@ -28,16 +26,13 @@
  transition: transform 0.8s;
  transform-style: preserve-3d;
 }
-.flip-card:focus .flip-card-inner {
- transform: rotateY(180deg);
-}
-/* Position the front and back side */
+
 .flip-card-front,
 .flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
- -webkit-backface-visibility: hidden; /* Safari */
+ -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
 }
 
@@ -50,7 +45,14 @@
  box-shadow: 0 0 0 6px #47ff3e59, 0 0 0 11px #a3ff9e80;
 }
 
-@media (min-width: 1279px) {
+
+@media (max-width: 1279px) {
+ /* Do an horizontal flip when you move the mouse over the flip box container */
+ .flip-card:focus .flip-card-inner {
+ transform: rotateY(180deg);
+}
+}
+@media (min-width: 1280px) {
  /* Do an horizontal flip when you move the mouse over the flip box container */
  .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
